--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev\"",
+    "build": "tinacms build && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "maplibre-gl": "^4.7.1",
     "marked": "^15.0.3",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "next": "^14.2.22",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tinacms": "^2.6.0"
   },
   "devDependencies": {
+    "@tinacms/cli": "^1.8.0",
+    "@types/node": "22.10.5",
+    "eslint-config-next": "^14.2.22",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
