--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.12.7",
     "maplibre-gl": "^4.7.1",
     "marked": "^15.0.3",
     "next": "^14.2.22",
