--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev\"",
-    "build": "tinacms build && next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.6",
     "gsap": "^3.12.7",
     "maplibre-gl": "^4.7.1",
     "marked": "^15.0.3",
     "next": "^14.2.22",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tinacms": "^2.6.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tinacms/cli": "^1.8.0",
