--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "mdx": "node ./queryMdx.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +13,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.6",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.12.7",
     "maplibre-gl": "^4.7.1",
     "marked": "^15.0.3",
