--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "maplibre-gl": "^4.7.1",
     "marked": "^15.0.3",
     "next": "^14.2.22",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
