--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.6",
+    "@next/mdx": "15.1.7",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.7",
     "maplibre-gl": "^4.7.1",
     "marked": "^15.0.3",
-    "next": "^14.2.22",
-    "next-mdx-remote": "^5.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "15.1.7",
+    "next-mdx-remote-client": "^2.0.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/node": "22.10.5",
-    "eslint-config-next": "^14.2.22",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
