--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "anywhere-adventures",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "mdx": "node ./queryMdx.js",
+    "newMdx": "node ./makeNewMdx.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
