--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/mdx": "15.1.7",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.7",
+    "interactjs": "^1.10.27",
     "maplibre-gl": "^4.7.1",
     "marked": "^15.0.3",
     "next": "15.1.7",
