--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next": "15.1.7",
     "next-mdx-remote-client": "^2.0.1",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "22.10.5",
