--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Ignore everything inside /public/content/generated
-/public/content/generated/
+/public/content/generated/*
+!/public/content/generated/.gitkeep
 
-# Ignore a specific file
 /src/app/lib/MdxQueries.js
+
+
 
 # dependencies
 /node_modules
