--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Initial build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build-
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Run MDX build
         run: npm run mdx
       - name: Final build with correct content with Next.js
