add focus lock package. wrap menu setting. remove content toolbar from visibility when menu is open, instead, add a new X button to close

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-mdx-remote-client": "^2.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-focus-lock": "^2.13.6",
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
