remove two slugs from page.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,11 +25,11 @@
     "target": "ES2017"
   },
   "include": [
-    "next-env.d.ts",
-    ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
-    "out/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "next-env.d.ts",
+    "out/types/**/*.ts",
   ],
   "exclude": [
     "node_modules"
